# crewai_bravesearch

./: .gitignore  README.md  pyproject.toml  requirements.txt
src/crewai_bravesearch/: crew.py  main.py
src/crewai_bravesearch/config/: agents.yaml  tasks.yaml
src/crewai_bravesearch/tools/: custom_tool.py
