[project]
name = "crewai_bravesearch"
version = "0.1.0"
description = "crewai_bravesearch using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<=3.13"
dependencies = [
    "crewai[tools]>=0.86.0,<1.0.0"
]

[project.scripts]
crewai_bravesearch = "crewai_bravesearch.main:run"
run_crew = "crewai_bravesearch.main:run"
train = "crewai_bravesearch.main:train"
replay = "crewai_bravesearch.main:replay"
test = "crewai_bravesearch.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
